[package]
name = "cark-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
cark-common = { path = "../cark-common" }
cark-client = { path = "../cark-client" }

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
simplelog = "0.12"
