[package]
name = "cark-window"
version = "0.1.0"
edition = "2021"

[dependencies]
cark-common = { path = "../cark-common" }
cark-client = { path = "../cark-client" }
serde = { version = "1.0", features = ["derive"] }
piston_window = "0"
piston2d-touch_visualizer = "0"
find_folder = "0"

toml = "0.8"

cpal = "0.15"
ezmid = { git = "https://github.com/carrotflakes/ezmid", rev = "43cd4cd2cf6f4e1b283560f38d964d47ee649750" }

log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
simplelog = "0.12"
